fixing post container alignment.

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -220,8 +220,8 @@ input[type="password"] {
 
     #all-posts>.post-container {
       // max-width: 95vw;
-      position: relative;
-      left: -1rem;
+      // position: relative;
+      // left: -1rem;
 
       .post-header {
         .author {
